# ASI-project

./: .dockerignore  .gitignore  Dockerfile  best_attrition_model.pkl  inventory.yaml  main.py  playbook.yaml  pyproject.toml  train_initial_model.py
.dvc/: config
data/: .gitignore  Employee-Attrition.csv.dvc
models/: rf_attrition_model.pkl
notebooks/: employee-attrition.ipynb
src/: automl_pycaret.py  optuna_tuning.py  preprocessing.py
