[project]
name = "asi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "joblib>=1.4.2",
    "imbalanced-learn>=0.12.4",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "dvc>=3.64.0",
    "dvc-gdrive>=3.0.1",
    "jupyterlab>=4.4.10",
]
